--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
   "require-dev": {
     "phpunit/phpunit": "^5.6",
     "doctrine/orm": "^2.5",
-    "mockery/mockery": "^0.9.6"
+    "mockery/mockery": "^0.9.6",
+    "sebastian/phpcpd": "^2.0",
+    "phploc/phploc": "^3.0",
+    "mayflower/php-codebrowser": "^1.1"
   },
   "autoload": {
     "psr-4": {
