--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   },
   "suggest": {
     "doctrine/orm": "For writing the audit log to the database",
-    "symfon/security": "For if you use the default event appenders"
+    "symfony/security": "For if you use the default event appenders"
   },
   "extra": {
     "branch-alias": {
