--- a/src/Resources/config/default/appenders.yml
+++ b/src/Resources/config/default/appenders.yml
@@ -22,6 +22,6 @@ services:
             - { name: kernel.event_subscriber}
 
     pbweb_audit.event_appender.impersonating_user_aware_entity:
-        class: Service\EventAppender\ImpersonatingUserAwareEntityEventAppender
+        class: Pbweb\AuditBundle\Service\EventAppender\ImpersonatingUserAwareEntityEventAppender
         tags:
             - { name: kernel.event_subscriber }
