--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     "phpunit/phpunit": "^5.6",
     "doctrine/orm": "^2.5",
     "mockery/mockery": "^0.9.6",
+    "squizlabs/php_codesniffer": "^2.8",
+    "pbweb/pbweb-coding-standard": "^1.1.1",
     "sebastian/phpcpd": "^2.0",
     "phploc/phploc": "^3.0",
     "mayflower/php-codebrowser": "^1.1"
