--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.0",
+    "php": "^7.1",
     "psr/log": "^1.0",
-    "symfony/symfony": "^3.2"
+    "symfony/symfony": "^3.4|^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
