--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,5 +1,7 @@
 services:
-    pbweb_audit.audit_log:
-        class: Pbweb\AuditBundle\Service\AuditLog
+    Pbweb\AuditBundle\Service\AuditLog:
         arguments:
-            - "@event_dispatcher"
+            - '@Symfony\Component\EventDispatcher\EventDispatcherInterface'
+
+    Pbweb\AuditBundle\Service\AuditLogInterface: '@Pbweb\AuditBundle\Service\AuditLog'
+    pbweb_audit.audit_log: '@Pbweb\AuditBundle\Service\AuditLog'
