--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
   "license": "MIT",
   "require": {
     "php": "^7.1",
+    "ext-json": "*",
     "psr/log": "^1.0",
-    "symfony/symfony": "^3.4|^4.0"
+    "symfony/http-kernel": "^3.4|^4.0",
+    "symfony/dependency-injection": "^3.4|^4.0",
+    "symfony/event-dispatcher": "^3.4|^4.0",
+    "symfony/config": "^3.4|^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
@@ -19,9 +23,9 @@
     "mockery/mockery": "^0.9.6",
     "squizlabs/php_codesniffer": "^2.8",
     "pbweb/pbweb-coding-standard": "^1.1.1",
-    "sebastian/phpcpd": "^2.0",
-    "phploc/phploc": "^3.0",
-    "mayflower/php-codebrowser": "^1.1"
+    "symfony/framework-bundle": "^3.4|^4.0",
+    "symfony/security-bundle": "^3.4|^4.0",
+    "symfony/monolog-bundle": "^3.3"
   },
   "autoload": {
     "psr-4": {
