--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     "symfony/http-kernel": "^3.4|^4.0",
     "symfony/dependency-injection": "^3.4|^4.0",
     "symfony/event-dispatcher": "^3.4|^4.0",
-    "symfony/config": "^3.4|^4.0"
+    "symfony/config": "^3.4|^4.0",
+    "symfony/yaml": "^3.4|^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.6",
+    "phpunit/phpunit": "^7.5",
+    "mockery/mockery": "^1.2",
     "doctrine/orm": "^2.5",
-    "mockery/mockery": "^0.9.6",
     "pbweb/pbweb-coding-standard": "^1.1.1",
     "symfony/framework-bundle": "^3.4|^4.0",
     "symfony/security-bundle": "^3.4|^4.0",
