--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <phpunit
-        backupGlobals               = "false"
-        backupStaticAttributes      = "false"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/8.4/phpunit.xsd"
         colors                      = "true"
-        convertErrorsToExceptions   = "true"
-        convertNoticesToExceptions  = "true"
-        convertWarningsToExceptions = "true"
-        processIsolation            = "false"
-        stopOnFailure               = "false"
+        verbose                     = "true"
         beStrictAboutTestsThatDoNotTestAnything = "false"
         bootstrap                   = "./tests/bootstrap.php">
 
     <testsuites>
         <testsuite name="Test suite">
-            <directory suffix="Test.php">./tests</directory>
+            <directory>tests</directory>
         </testsuite>
     </testsuites>
 
     <filter>
         <whitelist>
-            <directory>./src</directory>
+            <directory>src</directory>
         </whitelist>
     </filter>
 
