--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.1",
+    "php": ">=7.1",
     "ext-json": "*",
     "psr/log": "^1.0",
     "symfony/http-kernel": "^3.4|^4.0",
