--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,40 +1,23 @@
 image: docker:latest
 
 stages:
-  - build-app
+  - build
   - test
   - deploy
+
+cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+        - vendor/
 
 variables:
   DOCKER_DRIVER: overlay2
 
-build-php:
-  stage: build-app
-  image: composer
+build:
+  stage: build
   script:
-    - composer install --ignore-platform-reqs --no-ansi --no-dev --no-interaction --no-progress --no-scripts --optimize-autoloader
-  cache:
-    key: $CI_BUILD_REF_NAME
-    paths:
-      - vendor/
+    - composer install -n --prefer-dist -o --no-ansi --no-progress
   artifacts:
-    name: "vendor_${CI_BUILD_REF_NAME}"
-    expire_in: 30 min
-    paths:
-      - vendor/
-      - app/config/parameters.yml
-
-build-php-dev:
-  stage: build-app
-  image: composer
-  script:
-    - composer install --ignore-platform-reqs --no-ansi --no-interaction --no-progress --no-scripts --optimize-autoloader
-  cache:
-    key: $CI_BUILD_REF_NAME
-    paths:
-      - vendor/
-  artifacts:
-    name: "vendor_dev_${CI_BUILD_REF_NAME}"
     expire_in: 30 min
     paths:
       - vendor/
@@ -43,20 +26,20 @@ build-php-dev:
 test:
   image: $CI_REGISTRY/backend/docker/images/php:7.4-cli
   stage: test
-  script:
-    - SYMFONY_DEPRECATIONS_HELPER=disabled vendor/phpunit/phpunit/phpunit -d memory_limit=512M
   dependencies:
-    - build-php-dev
+      - build
+  script:
+      - SYMFONY_DEPRECATIONS_HELPER=disabled vendor/phpunit/phpunit/phpunit -d memory_limit=512M
   except:
     - master
 
 test-coverage:
   image: $CI_REGISTRY/backend/docker/images/php:7.4-pcov-cli
   stage: test
-  script:
-    - SYMFONY_DEPRECATIONS_HELPER=disabled vendor/phpunit/phpunit/phpunit -d memory_limit=512M --coverage-text --colors=never --coverage-html coverage
   dependencies:
-    - build-php-dev
+      - build
+  script:
+      - SYMFONY_DEPRECATIONS_HELPER=disabled vendor/phpunit/phpunit/phpunit -d memory_limit=512M --coverage-text --colors=never --coverage-html coverage
   artifacts:
     paths:
       - coverage/
@@ -65,10 +48,10 @@ test-coverage:
 
 pages:
   stage: deploy
-  script:
-    - mv coverage public
   dependencies:
-    - test-coverage
+      - test-coverage
+  script:
+      - mv coverage public
   artifacts:
     paths:
       - public/
