--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.1",
+    "php": ">=8.0",
     "ext-json": "*",
     "psr/log": "^1.0",
-    "symfony/http-kernel": "^3.4|^4.0",
-    "symfony/dependency-injection": "^3.4|^4.0",
-    "symfony/event-dispatcher": "^3.4|^4.0",
-    "symfony/config": "^3.4|^4.0",
-    "symfony/yaml": "^3.4|^4.0"
+    "symfony/http-kernel": "^4.4",
+    "symfony/dependency-injection": "^4.4",
+    "symfony/event-dispatcher": "^4.4",
+    "symfony/config": "^4.4",
+    "symfony/yaml": "^4.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.3",
+    "phpunit/phpunit": "^9.5",
     "mockery/mockery": "^1.4",
-    "doctrine/orm": "^2.5",
-    "symfony/framework-bundle": "^3.4|^4.0",
-    "symfony/security-bundle": "^3.4|^4.0",
-    "symfony/monolog-bundle": "^3.3"
+    "doctrine/orm": "^2.9",
+    "symfony/framework-bundle": "^4.4",
+    "symfony/security-bundle": "^4.4",
+    "symfony/monolog-bundle": "^3.7"
   },
   "autoload": {
     "psr-4": {
@@ -45,7 +45,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.x-dev"
+      "dev-master": "2.x-dev"
     }
   }
 }
