--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
     "php": ">=8.0",
     "ext-json": "*",
     "psr/log": "^1.0",
-    "symfony/http-kernel": "^4.4",
-    "symfony/dependency-injection": "^4.4",
-    "symfony/event-dispatcher": "^4.4",
-    "symfony/config": "^4.4",
-    "symfony/yaml": "^4.4"
+    "symfony/http-kernel": "^4.4|^5.0",
+    "symfony/dependency-injection": "^4.4|^5.0",
+    "symfony/event-dispatcher": "^4.4|^5.0",
+    "symfony/config": "^4.4|^5.0",
+    "symfony/yaml": "^4.4|^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "mockery/mockery": "^1.4",
+    "mockery/mockery": "^1.5",
     "doctrine/orm": "^2.9",
-    "symfony/framework-bundle": "^4.4",
-    "symfony/security-bundle": "^4.4",
+    "symfony/framework-bundle": "^4.4|^5.0",
+    "symfony/security-bundle": "^4.4|^5.0",
     "symfony/monolog-bundle": "^3.7"
   },
   "autoload": {
