--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.1",
     "ext-json": "*",
     "psr/log": "^1.0",
-    "symfony/http-kernel": "^4.4|^5.0",
-    "symfony/dependency-injection": "^4.4|^5.0",
-    "symfony/event-dispatcher": "^4.4|^5.0",
-    "symfony/config": "^4.4|^5.0",
-    "symfony/yaml": "^4.4|^5.0"
+    "symfony/http-kernel": "^5.4",
+    "symfony/dependency-injection": "^5.4",
+    "symfony/event-dispatcher": "^5.4",
+    "symfony/config": "^5.4",
+    "symfony/yaml": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "mockery/mockery": "^1.5",
     "doctrine/orm": "^2.9",
-    "symfony/framework-bundle": "^4.4|^5.0",
-    "symfony/security-bundle": "^4.4|^5.0",
-    "symfony/monolog-bundle": "^3.7"
+    "symfony/framework-bundle": "^5.4",
+    "symfony/security-bundle": "^5.4",
+    "symfony/monolog-bundle": "^3.8"
   },
   "autoload": {
     "psr-4": {
@@ -45,7 +45,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.x-dev"
+      "dev-master": "3.x-dev"
     }
   }
 }
