--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,18 @@
     "php": ">=8.1",
     "ext-json": "*",
     "psr/log": "^1.0",
-    "symfony/http-kernel": "^5.4",
-    "symfony/dependency-injection": "^5.4",
-    "symfony/event-dispatcher": "^5.4",
-    "symfony/config": "^5.4",
-    "symfony/yaml": "^5.4"
+    "symfony/http-kernel": "^5.4|^6.0",
+    "symfony/dependency-injection": "^5.4|^6.0",
+    "symfony/event-dispatcher": "^5.4|^6.0",
+    "symfony/config": "^5.4|^6.0",
+    "symfony/yaml": "^5.4|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "mockery/mockery": "^1.6",
     "doctrine/orm": "^2.9",
-    "symfony/framework-bundle": "^5.4",
-    "symfony/security-bundle": "^5.4",
+    "symfony/framework-bundle": "^5.4|^6.0",
+    "symfony/security-bundle": "^5.4|^6.0",
     "symfony/monolog-bundle": "^3.8"
   },
   "autoload": {
