--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "mockery/mockery": "^1.6",
-    "doctrine/orm": "^2.9",
+    "doctrine/orm": "^2.9|^3.0",
     "symfony/framework-bundle": "^5.4|^6.0",
     "symfony/security-bundle": "^5.4|^6.0",
     "symfony/monolog-bundle": "^3.8"
