--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=8.1",
     "ext-json": "*",
-    "psr/log": "^1.0",
+    "psr/log": "^1.0|^2.0|^3.0",
     "symfony/http-kernel": "^5.4|^6.0",
     "symfony/dependency-injection": "^5.4|^6.0",
     "symfony/event-dispatcher": "^5.4|^6.0",
